bug: align text for creation in Dunning Level modal

--- a/src/app/modules/master-data/components/dunning-levels/components/dunning-level-modal/dunning-level-modal.component.scss
+++ b/src/app/modules/master-data/components/dunning-levels/components/dunning-level-modal/dunning-level-modal.component.scss
@@ -7,7 +7,7 @@
     width: 130px;
     flex-shrink: 0;
   }
-  input, p-inputnumber {
+  input, p-inputnumber, textarea {
     width: 100%;
   }
 
